--- a/src/main/resources/i18n/messages/message_en.properties
+++ b/src/main/resources/i18n/messages/message_en.properties
@@ -3,8 +3,7 @@ sengkimseang=Seng Kimseang
 home=Home
 user=User
 userlist=User List
-roles=Role
-r=Role
+tota=Role
 rolelist=Role List
 admin= Administrator
 placehoder=Type here for search...
