Full insert select delete update

--- a/src/main/resources/i18n/messages/message_en.properties
+++ b/src/main/resources/i18n/messages/message_en.properties
@@ -17,17 +17,17 @@ all=See all notifications
 welcome=Welcome
 forminput=Form Input User
 formval=Form validations
-name=Name (required)
-email=E-Mail (required)
-url=URL (optional)
+name=Name 
+email=E-Mail 
+url=URL 
 comment=Your Comment (required)
 save=Save
 cancel=Cancel
 add=Add
 //user list
 n=Name
-e=Email
-u=URL
+e=Status
+u=user_hash
 action=Action
 
 // form role
@@ -44,9 +44,13 @@ city=City
 profile=Profile
 lock=Lock Screen
 logout=Log Out
-
-
-
+//new user
+gender=Gender
+phone=Phone
+status=Status
+user_hash=User_hash
+date=Date
+btnsave=Save
 
 
 
