--- a/src/main/resources/i18n/messages/message_kh.properties
+++ b/src/main/resources/i18n/messages/message_kh.properties
@@ -45,6 +45,12 @@ city=\u1791\u17B8\u1780\u17D2\u179A\u17BB\u1784
 profile=\u1782\u178E\u1793\u17B8
 lock=\u1785\u17B6\u1780\u17CB\u179F\u17C4
 logout=\u1785\u17B6\u1780\u1785\u17C1\u1789
+gender=\u1797\u17C1\u1791
+phone=\u179B\u17C1\u1781\u1791\u17BC\u179A\u179F\u1796\u17D2\u1791\u17D0
+status=\u178A\u17C6\u178E\u17B9\u1784
+user_hash=\u179B\u17C1\u1781\u1794\u1789\u17D2\u1787\u17B6\u1780\u17CB
+date=\u1790\u17D2\u1784\u17C3
+btnsave=\u179A\u1780\u17D2\u179F\u17B6\u1791\u17BB\u1780
 
 
 
