--- a/src/main/resources/i18n/messages/message_en.properties
+++ b/src/main/resources/i18n/messages/message_en.properties
@@ -46,11 +46,23 @@ lock=Lock Screen
 logout=Log Out
 //new user
 gender=Gender
-phone=Phone
+phone=PhoneNumber
 status=Status
 user_hash=User_hash
 date=Date
 btnsave=Save
+
+//dashboard
+totaluser=Total Users
+totalmale= Total Male
+totalfemale=Total Female
+male=Male
+female=Female
+userlost=User Lost
+a=100%
+b=60%
+c=40%
+d=57%
 
 
 
