--- a/src/main/resources/i18n/messages/message_kh.properties
+++ b/src/main/resources/i18n/messages/message_kh.properties
@@ -52,6 +52,14 @@ user_hash=\u179B\u17C1\u1781\u1794\u1789\u17D2\u1787\u17B6\u1780\u17CB
 date=\u1790\u17D2\u1784\u17C3
 btnsave=\u179A\u1780\u17D2\u179F\u17B6\u1791\u17BB\u1780
 
+\\Dashboard
+totaluser=\u1785\u17C6\u1793\u17BD\u1793\u17A2\u17D2\u1793\u1780\u1794\u17D2\u179A\u17BE\u179F\u179A\u17BB\u1794
+totalmale=\u1785\u17C6\u1793\u17BD\u1793\u1794\u17D2\u179A\u17BB\u179F\u179F\u179A\u17BB\u1794
+totalfemale=\u1785\u17C6\u1793\u17BD\u1793\u179F\u17D2\u178F\u17D2\u179A\u17B8\u179F\u179A\u17BB\u1794
+male=\u1794\u17BB\u179A\u179F
+female=\u179F\u17D2\u178F\u17D2\u179A\u17B8
+userlost=\u17A2\u17D2\u1793\u1780\u178A\u17C2\u179B\u1794\u17B6\u1793\u179B\u17BB\u1794
+
 
 
 
